Updated press kit page with some flavor me's and a favicon

--- a/tilefinder-press-kit.html
+++ b/tilefinder-press-kit.html
@@ -5,6 +5,7 @@
     <meta name="description" content="description"/>
     <meta name="author" content="author" />
     <meta name="keywords" content="keywords" />
+    <link rel="icon" type="image/x-icon" href="res/icon.ico">
     <style>
         body {
             background-color: #edf0f1;
@@ -13,6 +14,7 @@
             margin: 0px;
         }
         .content {
+            position: relative;
             width: 650px;
             margin: auto;
             margin-top: 0px;
@@ -57,11 +59,30 @@
         li {
             padding: 6px;
         }
+        .uwu {
+            position: absolute;
+            right: -250px;
+            top: 400px;
+            width: 240px;
+            transform: rotate(-15deg);
+        }
+        .smart {
+            position: absolute;
+            left: -250px;
+            top: 2400px;
+            width: 240px;
+            transform: scaleX(-1);
+        }
     </style>
   </head>
 <body>
+
     <div class="content">
-        <img class="img-centered" src="res/logo.png">
+        <img src="res/UwU.png" class="uwu">
+        <img src="res/Smart.png" class="smart">
+
+
+        <img class="img-centered" src="res/logo.png">        
 
 
         <h3>Trailer</h3>
@@ -139,9 +160,6 @@
 
         <p>My contact email is davedoubleedev@gmail.com and you can find Tilefinder at <a href="https://store.steampowered.com/app/1927570/Tilefinder">store.steampowered.com/app/1927570/Tilefinder</a>. I am also active on Twitter at <a href="https://twitter.com/DaveDoublee">twitter.com/DaveDoublee</a>. Cheers!</p>
 
-        <img class="img-centered" src="res/MeBanner.png" style="margin-bottom: 0px;">
-        <hr>
-
         <img class="img-centered" src="res/separator.png">
 
         <h3>Screenshots</h3>
@@ -166,6 +184,7 @@
             <img class="img-screenshot" src="res/ss/Logo Steam June.png">
         </div>
 
+        <img class="img-centered" src="res/MeBanner.png" style="margin-bottom: 0px;">
 
     </div>
 </body>
