Changed base font; improved responsive layout

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a class="button-link--white generic-button" href="#Contact">Hire me!</a>
                 </div>
             </div>
-            <img class="diagonal-cut" src="images/DiagonalCut.png">
+            <img style="bottom: -1px" class="diagonal-cut" src="images/DiagonalCut.png">
         </div>
 
 
@@ -315,7 +315,7 @@
             </div>
             <div class="project">
                 <div class="right">
-                    <h4>This Portofolio - Online Website Hosting</h4>
+                    <h4>This Portfolio - Online Website Hosting</h4>
                     <div class="tags">
                         <span>HTML5</span>
                         <span>CSS</span>
@@ -323,7 +323,7 @@
                         <span>GitHub Pages</span>
                     </div>
                     <div class="project-description-text">
-                        I have been riguriously studying <span style="color: var(--teal-color)">web design</span> lately, and have been focusing on making beautiful layouts for my full-stack application. My portofolio is my proof of work and competence regarding design.
+                        I have been riguriously studying <span style="color: var(--teal-color)">web design</span> lately, and have been focusing on making beautiful layouts for my full-stack application. My portfolio is my proof of work and competence regarding design.
                     </div>
                 </div>
                 <div class="left">
