Improved back arrow; made more responsive layout improvements

--- a/index.html
+++ b/index.html
@@ -279,8 +279,9 @@
     </div>
 
     <div id="Projects-Page"> 
-        <div class="back-arrow" onclick="backToIndexPage()">
-            ➔
+        <div class="back-arrow-container" onclick="backToIndexPage()">
+            <img class="back-arrow-background" src="images/BackArrowCorner.png">
+            <span class="back-arrow">▶</span>
         </div>
         <div class="other-projects"
             style="display: '';"
