Fixed a margin issue; added Firebase

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     Hire a one-man army, <span style="color: var(--teal-color)">Dave Doublee</span>.<br/>
                 </h1>
                 <div class="buttons">
-                    <a class="button-link--white generic-button" href="#Projects-Section">View my work</a>
-                    <a class="button-link--white generic-button" href="#Contact">Hire me!</a>
+                    <a class="button-link--white generic-button" href="#Projects-Section">Projects</a>
+                    <a class="button-link--white generic-button" href="#Contact">Let's do it!</a>
                 </div>
             </div>
             <img style="bottom: -1px" class="diagonal-cut" src="images/DiagonalCut.png">
@@ -253,8 +253,8 @@
                     <img class="technology-icon" src="images/icons/js.png">
                 </div>
                 <div class="technology">
-                    <h3>Haxe</h3>
-                    <img class="technology-icon" src="images/icons/haxe.png">
+                    <h3>Firebase</h3>
+                    <img class="technology-icon" src="images/icons/firebase.png">
                 </div>
                 <div class="technology">
                     <h3>React</h3>
