Added custom text for each proficiency

--- a/index.html
+++ b/index.html
@@ -229,6 +229,56 @@
                     I am a <span style="color: var(--teal-color)">JavaScript</span> enthusiast. What I am as well is <i>flexible</i> - I can work with any technology.
                     For my front-end projects, I use <span style="color: var(--teal-color)">React</span> or plain <span style="color: var(--teal-color)">HTML</span>, depending on your needs. No worries, I will help you decide 😉.
                 </div>
+                <div class="left" name="HTML5" hidden>
+                    What people don't know is that <span style="color: var(--teal-color)">HTML, CSS and JavaScript</span> are <span style="color: var(--teal-color)">cross-platform</span> technologies that can be exported to Desktop and Mobile applications.
+                    Front-end (websites, mobile, desktop, etc) is something I have a lot of experience with. Over the years, I have made dozens of projects just with HTML5, CSS and JavaScript.
+                    <br/><br/>
+                    I will design a beautiful website or application interface, and I will develop it as well. I will take your idea from zero to hero.
+                </div>
+                <div class="left" name="CSS" hidden>
+                    What people don't know is that <span style="color: var(--teal-color)">HTML, CSS and JavaScript</span> are <span style="color: var(--teal-color)">cross-platform</span> technologies that can be exported to Desktop and Mobile applications.
+                    <br/><br/>
+                    CSS goes hand-in-hand with HTML - I use modern CSS practices, thus resulting in clean CSS code and easily manage-able front-ends. My websites are also <span style="color: var(--teal-color)">responsive</span>, changing to their best form depending on the screen size and aspect ratio, as to fit mobile users, older monitors, etc.
+                    If your application ever needs look changes, it's as easy as changing a variable!
+                    <br/><br/>
+                    On demand, I can also work with SASS.
+                </div>
+                <div class="left" name="JavaScript" hidden>
+                    With JavaScript, I will create your server, <span style="color: var(--teal-color)">host it online for <b>free</b></span> (using Render.com) and also handle all logic on both the front-end of the app and the back-end.
+                    <br/><br/>
+                    I will also design and develop a <span style="color: var(--teal-color)">programming language</span> that can be compiled to any other language you like, or interpreted.
+                    <br/><br/>
+                    I will create <span style="color: var(--teal-color)">fast and reliable automation scripts</span> to ease your work; an Excel spreadsheet? Do you need data manipulation? Image processing? RPA? We can do it all!
+                </div>
+                <div class="left" name="Firebase" hidden>
+                    I will make your users <span style="color: var(--teal-color)">log in with Google, Facebook</span> or even with their <span style="color: var(--teal-color)">phone number</span>, all <span style="color: var(--teal-color)">for free</span>.
+                    I will also create, use and host your database, all of these using Google Firebase. If you need to expand your application into something larger, Firebase has got you covered. It can be expanded at any point. Firebase has unlimited power!
+                </div>
+                <div class="left" name="React" hidden>
+                    I will use React to develop your <span style="color: var(--teal-color)">larger front-end applications</span>. Like with HTML and JavaScript, all React apps can be exported to mobile or desktop.
+                    <br/><br/>
+                    If you need <span style="color: var(--teal-color)">high performance</span> on mobile and desktop, I can use ReactNative to export your application to those platforms, piece of cake!
+                </div>
+                <div class="left" name="node.js" hidden>
+                    I will create your <span style="color: var(--teal-color)">HTTP server</span> or <span style="color: var(--teal-color)">socket server</span> using Node, and <span style="color: var(--teal-color)">host it online for <b>free</b></span> (using Render.com).
+                    <br/><br/>
+                    I will also design and develop a <span style="color: var(--teal-color)">programming language</span> that can be compiled to any other language you like, or interpreted.
+                    <br/><br/>
+                    I will create <span style="color: var(--teal-color)">fast and reliable automation scripts</span> to ease your work; an Excel spreadsheet? Do you need data manipulation? Image processing? RPA? We can do it all!
+                </div>
+                <div class="left" name="SQL" hidden>
+                    I will design your large-scale <span style="color: var(--teal-color)">relational database</span> and implement it using any database management system you like (MySQL, Oracle, etc).
+                    As niche as it is, I have real life work experience with PL/SQL (back-end servers <i>on</i> the database) and I <span style="color: var(--teal-color)">love it</span>! We can make your database handle all back-end logic by itself! How cool is that!?
+                </div>
+                <div class="left" name="Unity" hidden>
+                    I will create a 3D or 2D game with Unity, and export it to any platform of your choosing (desktop, Android, Nintendo Switch, etc).
+                    <br/><br/>
+                    I have experience with <span style="color: var(--teal-color)">Augmented Reality</span> using Unity, <span style="color: var(--teal-color)">3D optimization, game design and shaders</span>. Say no more!
+                </div>
+
+                
+                <span style="color: var(--teal-color)"></span>
+                
                 <div class="right">
                     <div class="me-border"></div>
                     <img class="me" src="images/Me.jpg">
@@ -240,39 +290,54 @@
                 </div>
             </div>
             <div class="technologies">
-                <div class="technology">
+                <div class="technology" onclick="onTechnologyClick('HTML5')">
                     <h3>HTML5</h3>
                     <img class="technology-icon" src="images/icons/html.png">
                 </div>
-                <div class="technology">
+                <div class="technology" onclick="onTechnologyClick('CSS')">
                     <h3>CSS</h3>
                     <img class="technology-icon" src="images/icons/css.png">
                 </div>
-                <div class="technology">
+                <div class="technology" onclick="onTechnologyClick('JavaScript')">
                     <h3>JavaScript</h3>
                     <img class="technology-icon" src="images/icons/js.png">
                 </div>
-                <div class="technology">
+                <div class="technology" onclick="onTechnologyClick('Firebase')">
                     <h3>Firebase</h3>
                     <img class="technology-icon" src="images/icons/firebase.png">
                 </div>
-                <div class="technology">
+                <div class="technology" onclick="onTechnologyClick('React')">
                     <h3>React</h3>
                     <img class="technology-icon" src="images/icons/react.png">
                 </div>
-                <div class="technology">
+                <div class="technology" onclick="onTechnologyClick('node.js')">
                     <h3>node.js</h3>
                     <img class="technology-icon" src="images/icons/node.png">
                 </div>
-                <div class="technology">
+                <div class="technology" onclick="onTechnologyClick('SQL')">
                     <h3>SQL</h3>
                     <img class="technology-icon" src="images/icons/sql.png">
                 </div>
-                <div class="technology">
+                <div class="technology" onclick="onTechnologyClick('Unity')">
                     <h3>Unity</h3>
                     <img class="technology-icon" src="images/icons/unity.png">
                 </div>
             </div>
+
+            <script>
+                function onTechnologyClick(name) {
+                    const leftParts = document.querySelectorAll('.about .content .left')
+                    console.log(leftParts)
+                    for (let leftDiv of leftParts) {
+                        leftDiv.hidden = true
+                        if (leftDiv.getAttribute('name') == name) {
+                            leftDiv.hidden = false
+                        }
+                    }
+                }
+
+            </script>
+
 
             <img class="diagonal-cut" src="images/DiagonalCut.png" style="bottom: -1px">
         </div>
