--- a/index.html
+++ b/index.html
@@ -79,9 +79,63 @@
             <img style="bottom: -1px" class="diagonal-cut" src="images/DiagonalCut.png">
         </div>
 
-
-
         <div id="Projects-Section" class="projects">
+            <div class="h2-container">
+                <h2>Projects</h2>
+                <div class="h2-underscore" style="width:140px; background-color: var(--dark-font);"></div>
+            </div>
+
+            <div class="other-projects-wrapper">
+                <div onclick="onClickOnOtherProjects()" class="other-projects link">Other Projects <span style="line-height: 31px">➔</span></div>
+            </div>
+
+            <div class="projects-box">
+                <div class="thumbnail-wrapper">
+                    <img src="images/projects/CallofHeroes-Monitor.png">
+                    <div class="thumbnail-overlay">
+                        <p>Website for a Tabletop RPG, made with React</p>
+                        <a class="button-link--white generic-button" href="https://callofheroesrpg.github.io/">Visit Website</a>
+                    </div>
+                </div>
+                <div class="thumbnail-wrapper">
+                    <img src="images/projects/Tilefinder-Monitor.gif">
+                    <div class="thumbnail-overlay">
+                        <p>Haxe game, 100.000+ lines of code, cross-platform</p>
+                        <a class="button-link--white generic-button" href="https://callofheroesrpg.github.io/">Visit Website</a>
+                    </div>
+                </div>
+                <div class="thumbnail-wrapper">
+                    <img src="images/projects/HRManagementApp.png">
+                    <div class="thumbnail-overlay no-button">
+                        <p>LAN-syncing people management desktop application</p>
+                    </div>
+                </div>
+                <div class="thumbnail-wrapper">
+                    <img src="images/projects/Portofolio.png">
+                    <div class="thumbnail-overlay">
+                        <p>My portfolio! Try hovering over a title!</p>
+                        <a class="button-link--white generic-button" href="https://davedoublee.github.io">Visit Website</a>
+                    </div>
+                </div>
+                <div class="thumbnail-wrapper">
+                    <img src="images/projects/GraveyardMan.png">
+                    <div class="thumbnail-overlay">
+                        <p>3D Unity game made with C#; level design exploration</p>
+                        <a class="button-link--white generic-button" href="https://github.com/daverave1212/graveyard-man">Visit Website</a>
+                    </div>
+                </div>
+                <div class="thumbnail-wrapper">
+                    <img src="images/projects/Waxx.png">
+                    <div class="thumbnail-overlay">
+                        <p>Programming language with scientific article and demo</p>
+                        <a class="button-link--white generic-button" href="https://daverave1212.github.io/waxx-demo/">Visit Website</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- <div id="Projects-Section" class="projects">
             <div class="h2-container">
                 <h2>Projects</h2>
                 <div class="h2-underscore" style="width:140px; background-color: var(--dark-font);"></div>
@@ -102,7 +156,7 @@
                 <img loading="eager" class="project-phone-img top" src="images/projects/CallofHeroes-Phone.png">
                 <img loading="eager" class="phone-img" src="images/Phone.png">
             </div>
-        </div>
+        </div> -->
 
         <script>
             let isClickable = true
@@ -380,8 +434,7 @@
 
     <div id="Projects-Page"> 
         <div class="back-arrow-container" onclick="backToIndexPage()">
-            <img class="back-arrow-background" src="images/BackArrowCorner.png">
-            <span class="back-arrow">▶</span>
+            <span class="back-arrow">v</span>
         </div>
         <div class="other-projects"
             style="display: '';"
@@ -397,7 +450,7 @@
 
 
             <div class="project">
-                <div class="right">
+                <div class="right" style="margin-top: -30px;">
                     <h4 style="margin-top: 15px;">Tilefinder, Roguelike Turn-Based RPG on Steam - Haxe, Stencyl</h4>
                     <div class="tags">
                         <span>Haxe</span>
